--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <style>
-        /* body{
+         body{
             font-family: 'Bitter', 'serif';
             background-image:  linear-gradient(to right, #000000 , #e74c3c);
             background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(img/home_background.jpg);
@@ -14,7 +14,7 @@
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
-        } */
+        } 
         .more{
             transition: 0.6s ease;
         }
